packages/docsearch-theme-light/src/index.css
:root {
  --algolia-docsearch-primary-color: #5468ff;
  --algolia-docsearch-secondary-color: #5d6494;
  --algolia-docsearch-third-color: #232533;
}

/* Form */

.algolia-docsearch-form {
  position: relative;
}

/* Dropdown */

.algolia-docsearch-dropdown * {
  box-sizing: border-box;
}

.algolia-docsearch-dropdown {
  background: linear-gradient(
    0deg,
    rgb(245, 245, 250) 0%,
    rgb(255, 255, 255) 100%
  );
  border-radius: 6px;
  box-shadow: 0px 2px 4px 0px rgba(93, 100, 148, 0.2),
    0px 5px 15px 0px rgba(37, 44, 97, 0.15);
  height: 100%;
  max-height: 553px;
  max-width: 532px;
  overflow: scroll;
  width: 100%;
  position: absolute;
}

.algolia-docsearch-dropdown ul,
.algolia-docsearch-dropdown li {
  list-style: none;
  margin: 0;
  padding: 0;
}

.algolia-docsearch-dropdown a {
  text-decoration: none;
}

.algolia-docsearch-results {
  padding: 1.5rem;
}

/* Items */

.algolia-docsearch-item::after {
  background: linear-gradient(
    -90deg,
    rgba(197, 201, 224, 0) 0%,
    rgb(197, 201, 224) 51%,
    rgba(197, 201, 224, 0) 100%
  );
  content: '';
  display: block;
  height: 1px;
  margin: 1.5rem 0;
  width: 484px;
}

.algolia-docsearch-item-header {
  color: var(--algolia-docsearch-secondary-color);
  font-size: 14px;
  font-weight: bold;
  letter-spacing: 1.25px;
  line-height: 16px;
  margin: 0 0 0.5rem 0;
  text-transform: uppercase;
}

.algolia-docsearch-item-body {
  border-radius: 3px;
  display: block;
  margin: 0.5rem 0;
  padding: 0.5rem 0;
}

li[aria-selected='true'] .algolia-docsearch-item-body,
.algolia-docsearch-item-body--active {
  background-color: rgba(218, 219, 234, 0.4);
  border-radius: 3px;
  margin: 0.5rem -1rem;
  padding: 0.5rem 1rem;
}

.algolia-docsearch-item-body-title {
  color: var(--algolia-docsearch-third-color);
  font-size: 14px;
  letter-spacing: -0.15px;
  line-height: 24px;
  margin: 0.5rem 0 1px 0;
  font-weight: normal;
}

.algolia-docsearch-item-body-subtitle {
  color: var(--algolia-docsearch-secondary-color);
  font-size: 10px;
  font-weight: bold;
  height: 16px;
  letter-spacing: 1.25px;
  line-height: 16px;
  margin: 0 0 3px 0;
  text-transform: uppercase;
}

.algolia-docsearch-item-body-paragraph {
  color: rgba(0, 0, 0, 0.5);
  font-size: 12px;
  font-weight: normal;
  line-height: 16px;
  margin: 0 0.5rem 0.5rem 0;
}

/* Highlight */

.algolia-docsearch-results mark {
  background: none;
  color: var(--algolia-docsearch-primary-color);
  font-weight: bold;
}

/* Footer */

.algolia-docsearch-information {
  align-items: center;
  background-color: #f5f5fa;
  display: flex;
  height: 55px;
  justify-content: space-between;
  padding: 1.5rem;
  position: relative;
}

.algolia-docsearch-information::before {
  background-color: #c5c9e0;
  content: '';
  display: block;
  height: 1px;
  position: absolute;
  top: 0;
  width: calc(100% - 3rem);
}

.algolia-docsearch-commands {
  display: flex;
}

.algolia-docsearch-commands li {
  align-items: center;
  display: flex;
}

.algolia-docsearch-commands li {
  margin-right: 16px;
}

.algolia-docsearch-commands svg {
  height: 16px;
  width: 16px;
}

.algolia-docsearch-commands svg + svg {
  margin-left: 0.125rem;
}

.algolia-docsearch-commands-description {
  color: var(--algolia-docsearch-secondary-color);
  font-size: 12px;
  letter-spacing: 0;
  margin-left: 0.25rem;
}

/* Logo */

.algolia-docsearch-logo svg {
  height: 16px;
}

